--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -21,8 +21,8 @@
         android:layout_marginBottom="80dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:text="点击进入"
         android:visibility="gone"
+        android:background="@drawable/guidance_skip"
 
         />
 
