--- a/app/src/main/res/layout/activity_welcome_start.xml
+++ b/app/src/main/res/layout/activity_welcome_start.xml
@@ -4,19 +4,11 @@
     android:id="@+id/activity_welcome_start"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.administrator.dianping.WelcomeStartAct"
     android:background="@android:color/holo_blue_bright">
-    <TextView
+    <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="WELCOME"
-        android:gravity="center"
-        android:textSize="50dp"
-        android:textColor="@android:color/white"
-        />
+        android:src="@drawable/ic_splash_screen"/>
 
 </RelativeLayout>
