--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
     <RadioGroup
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:id="@+id/tab_group">
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -24,8 +25,17 @@
             android:button="@null"
             android:id="@+id/index"
             android:text="首页"
+            android:textColor="@color/main_color_selector"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
             android:gravity="center"
-            android:drawableTop="@drawable/index_sel"/>
+            android:drawableTop="@drawable/index_sel"
+            android:drawablePadding="5dp"
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
+            android:textSize="20sp"
+
+            />
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,8 +43,15 @@
             android:button="@null"
             android:id="@+id/label"
             android:text="标签"
+            android:textColor="@color/main_color_selector"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
             android:gravity="center"
-            android:drawableTop="@drawable/label_sel"/>
+            android:drawableTop="@drawable/label_sel"
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
+            android:drawablePadding="5dp"
+            android:textSize="20sp"/>
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -42,8 +59,15 @@
             android:button="@null"
             android:id="@+id/history"
             android:text="历史"
+            android:textColor="@color/main_color_selector"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
             android:gravity="center"
-            android:drawableTop="@drawable/history_sel"/>
+            android:drawableTop="@drawable/history_sel"
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
+            android:drawablePadding="5dp"
+            android:textSize="20sp"/>
         <RadioButton
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,7 +75,14 @@
             android:button="@null"
             android:id="@+id/aboutme"
             android:text="我"
+            android:textColor="@color/main_color_selector"
+            android:scaleX="0.6"
+            android:scaleY="0.6"
             android:gravity="center"
-            android:drawableTop="@drawable/aboutme_sel"/>
+            android:drawableTop="@drawable/aboutme_sel"
+            android:paddingLeft="0dp"
+            android:paddingRight="0dp"
+            android:drawablePadding="5dp"
+            android:textSize="20sp"/>
     </RadioGroup>
 </LinearLayout>
