--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,8 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
-    <color name="black_overlay">#66000000</color>
+    <color name="black_overlay">#66000000</color> 
+    <color name="normal_orange_color">#FF6633</color>
+    <color name="normal_back_color">#E0DFE0</color>
+
 </resources>
