--- a/app/src/main/res/layout/fragment_fragment_1.xml
+++ b/app/src/main/res/layout/fragment_fragment_1.xml
@@ -22,7 +22,7 @@
         <TextView
             android:layout_toRightOf="@+id/add_icon"
             android:padding="5dp"
-
+            android:id="@+id/choose_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="定位城市"
