--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="normal_orange_color">#FF6633</color>
     <color name="normal_back_color">#E0DFE0</color>
     <color name="whilte">#FFFFFF</color>
+    <color name="gray">#6ad9ded9</color>
 </resources>
