--- a/app/src/main/res/layout/activity_choose_city.xml
+++ b/app/src/main/res/layout/activity_choose_city.xml
@@ -4,16 +4,21 @@
     android:id="@+id/activity_choose_city"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.administrator.dianping.acti.ChooseCityActivity">
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/list_choose">
+        android:layout_height="match_parent"
+        android:id="@+id/list_choose"
+        android:scrollbars="none"
+
+        >
 
     </ListView>
+    <com.example.administrator.dianping.myview.SideView
+        android:layout_width="26dp"
+        android:layout_height="match_parent"
+        android:id="@+id/myside_view"
+        android:layout_alignParentRight="true"
+     />
 
 </RelativeLayout>
