--- a/app/src/main/res/layout/fragment_fragment_1.xml
+++ b/app/src/main/res/layout/fragment_fragment_1.xml
@@ -48,7 +48,8 @@
             android:layout_height="wrap_content"
             android:src="@drawable/ic_search"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"/>
+            android:layout_centerVertical="true"
+            android:id="@+id/refresh"/>
 
     </RelativeLayout>
 
