--- a/app/src/main/res/layout/goods_list_item.xml
+++ b/app/src/main/res/layout/goods_list_item.xml
@@ -3,8 +3,9 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="120dp"
+        android:layout_height="90dp"
+
         android:id="@+id/good_pic"/>
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,32 +15,50 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/good_short_title"
-            android:layout_weight="2"/>
+            android:layout_weight="2"
+            android:singleLine="true"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginLeft="5dp"
+            />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:id="@+id/good_title"
-            android:layout_weight="3"/>
+            android:layout_weight="3"
+            android:textColor="@color/gray"
+            android:maxLines="2"
+            android:minLines="2"
+            android:textSize="16sp"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_marginLeft="5dp"
+
+            />
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:orientation="horizontal"
-                android:layout_weight="1">
+                android:layout_weight="2"
+                android:layout_marginLeft="6dp">
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
-                    android:id="@+id/good_price"/>
+                    android:id="@+id/good_price"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:textColor="@color/normal_orange_color"/>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="2"
-                    android:id="@+id/good_value"/>
+                    android:id="@+id/good_value"
+                    android:gravity="bottom"
+                    android:maxLines="1"/>
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:id="@+id/good_sum"/>
+                    android:id="@+id/good_sum"
+                    android:gravity="bottom"/>
             </LinearLayout>
 
     </LinearLayout>
